--- a/03_Recuperacao/templates/index.html
+++ b/03_Recuperacao/templates/index.html
@@ -16,6 +16,9 @@
 
 <body>
   <div class="container">
+    <div class="d-flex justify-content-center">
+      <img class="logo" src="{{ url_for('static', filename='logo.png') }}" alt="logo">
+    </div>
     <div class="search-container">
       <h1>Buscador de Voos ( Passagens Aéreas )</h1>
       <form method="POST" class="row g-3">
