--- a/03_Recuperacao/templates/estatisticas.html
+++ b/03_Recuperacao/templates/estatisticas.html
@@ -111,10 +111,10 @@
             </div>
         </div>
 
-        <!-- Melhor Custo-Benefício -->
+        <!-- Melhor Custo-Tempo -->
         <div class="card mb-4">
             <div class="card-header bg-success text-white">
-                <h5 class="mb-0"><i class="fas fa-star"></i> Melhor Custo-Benefício</h5>
+                <h5 class="mb-0"><i class="fas fa-star"></i> Melhor Custo-Tempo</h5>
             </div>
             <div class="card-body">
                 <p class="card-text mb-3">
